--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-
 # Created by https://www.toptal.com/developers/gitignore/api/node,macos,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,macos,windows
+
+### Project specific
+*.zip
 
 ### macOS ###
 # General
