--- a/main/manifest.json
+++ b/main/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Search and replace",
+  "name": "Search & Replace",
   "version": "1.3.17",
   "description": "Adds a search and replace tool for input fields and editable text content.",
   "author": "Tarvo Reinpalu",
